Fix study embeds on mobile again - closes #12311
Originally fixed in #9455 but regressed in ebed99696649f22fb53ba0a13341de8716f7d386

--- a/ui/common/css/abstract/_extends.scss
+++ b/ui/common/css/abstract/_extends.scss
@@ -211,7 +211,7 @@
   }
 }
 
-%game-embed {
+%study-embed {
   @include breakpoint($mq-not-xx-small) {
     padding-bottom: 160%;
   }
